# MazeNet

./: .gitignore  CMakeLists.txt  README.md  main.cpp  run.sh
include/: config.hpp  mnist.hpp  model.hpp  utils.hpp
src/: main.cpp  mnist.cpp  model.cpp  utils.cpp
